k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloud-manager
  labels:
    app.kubernetes.io/name: cloud-manager
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/component: namespace
